fixed lost drag tilt, fixed scrollbar overlof y, added status bar, no function yet only displays 0% bcs subtask is not checkable or editable

--- a/css/board.css
+++ b/css/board.css
@@ -115,7 +115,6 @@
     height: 688px;
     gap: 44px;
     padding-top: 8px;
-    overflow-y: auto;
 }
 
 .board-list-column {
