--- a/shared/cardTemplates/boardCardTemplate.css
+++ b/shared/cardTemplates/boardCardTemplate.css
@@ -59,7 +59,7 @@
 .progressbar {
     display: flex;
     align-items: center;
-    width: 128px;
+    width: 100px !important;
     height: 8px;
     border-radius: 8px;
     background-color: #F4F4F4;
@@ -84,3 +84,20 @@
     transform: rotate(5deg) scale(1.02);
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
 }
+
+.progressbar {
+    width: 128px;
+    height: 8px;
+    background-color: #F4F4F4;
+    border-radius: 8px;
+    position: relative;
+  }
+  .progressbar-fill {
+    height: 100%;
+    width: 0%;
+    background-color: #29ABE2;
+    border-radius: 8px;
+    transition: width 0.3s ease;
+  }
+  
+  
